@@ -26,6 +26,9 @@
     - [RT #33970] Fail fast when a referenced file can't be opened
       (requested by Barrie Slaymaker a mere 8.5 years ago).
 
+    - Add -simplex, -duplexfliplongedge and -duplexflipshortedge as
+      options to $pdf->preferences() (requested by Doug Poulin).
+
 
 2.028     2016-06-08
 
